--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.huybinh2k.computerstore">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:windowSoftInputMode="adjustPan"
-        android:theme="@style/Theme.ComputerStore">
+        android:theme="@style/Theme.ComputerStore"
+        android:windowSoftInputMode="adjustPan">
         <activity
-            android:name=".activity.SearchActivity" />
+            android:name=".activity.ChangePasswordActivity"
+            android:exported="false" />
+        <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.AuthenticationActivity" />
-        <activity
-            android:name=".activity.ComputerStoreActivity">
+        <activity android:name=".activity.ComputerStoreActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +25,14 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegisterActivity" />
     </application>
-
     <queries>
         <intent>
             <action android:name="android.speech.RecognitionService" />
         </intent>
     </queries>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
