BinhBH: Sua Giao dien Danh muc, ghep api danh muc

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ComputerStore"
-        android:windowSoftInputMode="adjustPan">
+        android:windowSoftInputMode="adjustResize|stateHidden|adjustPan">
         <activity
             android:name=".activity.DetailsItemActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.CartActivity"
             android:exported="false" />
         <activity
             android:name=".activity.ChangePasswordActivity"
