--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.allenliu.badgeview:library:1.1.1';
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
